# ru.sh

./: .gitignore  API_INTEGRATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  README.md  SECURITY_AUDIT.md  TROUBLESHOOTING.md  bench_output.txt  bench_output2.txt  mask_bench  tasks.md  wrangler.toml
.github/workflows/: ci.yml  deploy-web.yml  release.yml
.jules/: bolt.md  sentinel.md
benchmark/: data.json  model_performance.html  visualization.html
crates/ru-cli/: Cargo.toml
crates/ru-cli/benches/: baseline.json  cli_perf.rs  e2e_perf.rs  run_benchmarks.sh
crates/ru-cli/src/: api.rs  api.rs.orig  config.rs  history.rs  lib.rs  main.rs  main.rs.orig  main.rs.rej  prompt.rs  safety.rs  sanitize.rs  shell.rs  update.rs  usage.rs
crates/ru-cli/tests/: execution_tests.rs  interactive_tests.rs  recovery_tests.rs
crates/ru-web/: .gitignore  Cargo.toml  index.html  input.css  package-lock.json  package.json  tailwind.config.js
crates/ru-web/public/: install
crates/ru-web/src/: app.rs  lib.rs
docs/architecture/: api-integration.md
