[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.8"
edition = "2024"
license = "Apache-2.0"
authors = ["saint"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
toml = "0.8"
dirs = "6"

[profile.release]
lto = true
codegen-units = 1
strip = true
