[package]
name = "ru-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Convert natural language to shell scripts with AI"

[[bin]]
name = "ru"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
toml.workspace = true
dirs.workspace = true

clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
colored = "3"
dialoguer = "0.11"
regex = "1"
unicode-normalization = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.24.0"
