[package]
name = "ru-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Landing page for ru.sh CLI tool"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
